# LinuxAdmin

./: Part1_SecondPart.txt  TheorySolutions
LinuxAdministration/: CMAKE (PART 2. B).txt  Linux administration project_PArt1 Bash script.txt  MAKE FILE (PART 2. A).txt  Part 3.txt
cmakeProject/Project/: CMakeLists.txt
cmakeProject/Project/Application/: CMakeLists.txt
cmakeProject/Project/Modules/caesar_cipher/: CMakeLists.txt
cmakeProject/Project/Modules/xor_cipher/: CMakeLists.txt
makeFileProject/: Makefile_template
makeFileProject/Project/Application/: Makefile  output
makeFileProject/Project/Modules/caesar_cipher/: caesar_cipher.mk
makeFileProject/Project/Modules/xor_cipher/: xor_cipher.mk
